# Debating-coach

./: .gitignore  LICENSE  README.md  debate_concepts.json  debate_output_contract.json  graph.py  main.py  pyproject.toml  requirements-rag.txt  requirements.txt  topics.json
agents/: argue_node.py  article_context_node.py  case_deep_dive_node.py  coach_node.py  english_coach_node.py  english_quiz_node.py  filter_node.py  format_node.py  lead_case_selector.py  motion_drafting_node.py  motion_intelligence_node.py  night_agent.py  preknowledge_enrichment_node.py  rag_enrich_node.py  rank_node.py  research_node.py  summarize_node.py  topic_foundation_node.py  topic_motion_mining_node.py  topic_selector.py  vocab_enrichment_node.py  weekend_agent.py
core/: debate_guidance.py  fallback.py  llm_pool.py  llm_router.py  network_utils.py  prompt_cache.py  state.py  topic_utils.py
delivery/: telegram.py  whatsapp.py
docs/: ADVANCED_RAG_ROADMAP.md  AGENT_ARCHITECTURE_3_PHASE_PLAN.md  AGENT_ARCHITECTURE_IMPLEMENTATION_BLUEPRINT.md  AGENT_ARCHITECTURE_IMPLEMENTATION_GUARDRAILS.md  DEBATE_GUIDANCE_PIPELINE_PLAN.md  DebateIQ_Agent_README.docx  FORKING_GUIDE.md  PHASE1_SPRINTS.md  REFERENCE.md  REMAINING_RAG_CHECKLIST.md  STATE_PERSISTENCE.md  TELEGRAM_SETUP.md  WHATSAPP_SETUP.md
handbook/: build.py  diagrams.py  style.py
memory/: weekly_log.json  weekly_store.py
rag/: article_extractor.py  chunking_strategy.py  context_packer.py  document_index.py  embeddings.py  evidence_organizer.py  ingest.py  metadata.py  query_planner.py  query_router.py  reranker.py  retrieval_memory.py  (+5 more)
(+39 files in other folders)
